# compressed_rtf

./: .pylintrc  .travis.yml  README.md  compressed_rtf.py  crc32.py  pyproject.toml  setup.py  test.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  change.md  feature_request.md
.github/workflows/: feature_branch_build.yml
compressed_rtf/: __init__.py  __version__.py  compressed_rtf.py  crc32.py  version.py
tests/: tests.py
