[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "compressed-rtf"
dynamic = ["version"]
description = "Compressed Rich Text Format (RTF) compression and decompression package"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Dmitry Alimov" },
]
keywords = [
    "compressed-rtf",
    "lzfu",
    "mela",
    "rtf",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Win32 (MS Windows)",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Archiving :: Compression",
    "Topic :: Text Processing",
]

[project.urls]
Homepage = "https://github.com/delimitry/compressed_rtf"

[tool.setuptools.dynamic]
version = { attr = "compressed_rtf.__version__.__version__" }
